Implemented Series and Sets, added to Search, Sets include summarization and UI additions, added rarity symbols
