# backend/src/routes/index.ts
@@ -1,6 +1,8 @@
 import { Router } from 'express';
 import { cardsRouter } from './cards';
 import { heartbeatRouter } from './heartbeat';
+import { seriesRouter } from './series';
+import { setsRouter } from './sets';
 import { userCardsRouter } from './userCards';
 
 const router = Router();
@@ -8,6 +10,8 @@ const router = Router();
 const v1Router = Router();
 v1Router.use('/heartbeat', heartbeatRouter);
 v1Router.use('/cards', cardsRouter);
+v1Router.use('/series', seriesRouter);
+v1Router.use('/sets', setsRouter);
 v1Router.use('/user-cards', userCardsRouter);
 
 router.use('/v1', v1Router);
